@@ -1,3 +1,7 @@
+2011-04-23 Borut Razem <borut.razem AT gmail.com>
+
+	* packages/build.rsync/Makefile: resync version 3.0.8
+
 2011-04-11 Borut Razem <borut.razem AT gmail.com>
 
 	* packages/build.gcc/Makefile, packages/build.gmp_mpfr/Makefile:
